Noteworthy changes to the RISC OS GCCSDK releases made.

For more details on all UnixLib changes, see !GCC.docs.libunixlib.ChangeLog.

GCCSDK GCC 4.7.4 Release 2 (released xxx)
==========================
  - Unixlib: Add support for __cxa_atexit (r6754,r6778).
  - Unixlib: Add support for clang/llvm (r6755).
  - Unixlib: When the size of an mmapped file is not a multiple of the page size,
    zero the remainder (r6772).
  - Unixlib: Add VFP support (r6795,r6867).
  - Unixlib: Add support for naming pthreads.
  - Unixlib: select() fix; only report a file descriptor as bad if it was given
    in one of the sets (r6862).
  - GCC: VFP fixes (r6869).
  - GCC: Make -mno-unaligned-access the default (r6796).
  - GCC: Fix handling of section anchors in module code (r6866,r6871).
  - GCC: Fix potential stack frame corruption (r6897)
  - Dynamic Linker: Fix handling of ':' in path variables (r6870).
  - Dynamic Linker: Add VFP support (r6797).


GCCSDK GCC 4.7.4 Release 1 (released 2 December 2014)
==========================

Major changes:
  - Upgraded to GCC 4.7.4.
  - Upgraded to Binutils 2.24.

Bug fixes and other improvements:

GCCSDK GCC 4.1.2 Release 2 (released 1 October 2012)
==========================

Bug fixes and other improvements:
  - UnixLib: strftime fix (r5755, bug #226)
  - UnixLib: getcwd fix (r5758, bug #227)
  - UnixLib: glob fix (r5766, r5776, bug #229, bug #231)
  - UnixLib: readdir inode fix (r5767)
  - UnixLib: support for alias-disabling prefix (r5775, bug #232)
  - UnixLib: sendto return value fix (r5780, bug #233)
  - UnixLib: avoid closing RISC OS input/output stream (r5785, bug #236)
  - UnixLib: support tmpnam/tmpnam_r and __RISCOSIFY_NO_PROCESS combination
    (r5823, bug #238)
  - UnixLib: Avoid reading from NULL when SWI DDEUtils_ReadPrefix is not
    defined, nor Prefix$Dir is set (r5902, bug #241).
  - GCC: Disable tail call optimisations when stack checking is enabled to
    prevent stack corruption (bug #230, #243).
