@@ -2,7 +2,7 @@ Noteworthy changes to the RISC OS GCCSDK releases made.
 
 For more details on all UnixLib changes, see !GCC.docs.libunixlib.ChangeLog.
 
-GCCSDK GCC 4.7.4 Release 2 (released xxx)
+GCCSDK GCC 4.7.4 Release 2 (released 7 September 2015)
 ==========================
   - Unixlib: Add support for __cxa_atexit (r6754,r6778).
   - Unixlib: Add support for clang/llvm (r6755).
@@ -18,6 +18,8 @@ GCCSDK GCC 4.7.4 Release 2 (released xxx)
   - GCC: Fix potential stack frame corruption (r6897)
   - Dynamic Linker: Fix handling of ':' in path variables (r6870).
   - Dynamic Linker: Add VFP support (r6797).
+  - SharedUnixLib: VFP support (v1.13, r6795)
+  - SharedUnixLib: fix memory leak (v1.14, r6905)
 
 
 GCCSDK GCC 4.7.4 Release 1 (released 2 December 2014)
